--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.16.6",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.16.0",
+    "file-saver": "^2.0.5",
     "react": "^18.3.1",
+    "react-doc-viewer": "^0.1.13",
     "react-dom": "^18.3.1",
+    "react-excel-renderer": "^1.1.0",
+    "react-file-viewer": "^1.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
